# authin

./: Cargo.toml  Dockerfile
clorinde/src/: queries.rs
clorinde/src/queries/: groups.rs  permissions.rs  users.rs
migrations/: 0001_user_table.sql  0002_permission_and_groups_table.sql  0003_add_constraints.sql
queries/: groups.sql  permissions.sql  users.sql
src/: cli.rs  config.rs  error.rs  main.rs  migrations.rs  prelude.rs
src/cli/: mod.rs  style.rs
src/functions/: user.rs
src/models/: group.rs  permission.rs  user.rs
src/routes/: user.rs
src/routes/user/: authorize.rs  delete.rs  info.rs  login.rs  mod.rs  register.rs  update_pwd.rs
