[package]
name = "authin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "2"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
jsonwebtoken = "9"
chrono = "0.4.41"
argon2 = { version = "0.5.3", features = ["std"] }
futures = "0.3.31"
clap = { version = "4.5.40", features = ["derive"] }
clin = { git = "https://github.com/Baguuc/clin" }
colored = "3.0.0"
